# fast_api_example

./: README.md  pyproject.toml  settings.toml  setup.cfg
app/: Makefile  config.py  conftest.py  main.py  prospector.yaml  settings.toml
app/ext/: base.py  database.py
app/migrations/: env.py
app/migrations/versions/: 12ae389986b3_add_task_table_update.py  391a52083d56_add_task_table.py  6535654405d4_add_task_table.py  cff876cf7d40_add_mixins.py
app/scripts/: env.py
app/todo/: __init__.py  bootstrap.py  repository.py  settings.local.toml  unit_of_work.py
app/todo/api/: endpoints.py
app/todo/api/api_v1/: endpoints.py
app/todo/dao/: __init__.py  base.py  dao_todo.py
app/todo/models/: audit_mixins.py  models_task.py  models_todo.py
app/todo/repositories/: todo.py
app/todo/schemas/: schemas_todo.py
app/todo/services/: services_todo.py
app/todo/tests/: test_services_todo.py  test_todo_endpoints.py  test_todo_services.py
