[tool.poetry]
name = "fastapi-todo"
version = "0.1.0"
description =  "FastAPI todo example"
authors = ["Admin <contact@jonatasoliveira.dev>"]

[tool.poetry.dependencies]
python = "~3.11"
uvicorn = {extras = ["standard"], version = "*"}
fastapi = "*"
asyncpg = "*"
loguru = "*"
dynaconf = "*"
pydantic = "*"
gunicorn = "*"
psycopg2-binary = "*"
alembic = "*"
sqlalchemy = "*"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
ipdb = "*"
pylint = "*"
mypy = "*"
isort = "*"
sqlalchemy-stubs = "*"
pytest = "*"
pytest-cov = "*"
pytest-watch = "*"
pytest-sugar = "*"
pytest-mock = "*"
pytest-asyncio = "*"
blue = "^0.9.1"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
